# stark-stir-service

./: README.md
stark-stir-fips-security/: Cargo.toml
stark-stir-fips-security/.claude-flow/data/: pending-insights.jsonl
stark-stir-fips-security/crates/: Cargo.toml
stark-stir-fips-security/crates/api/: Cargo.toml
stark-stir-fips-security/crates/api/examples/: verify_split.rs
stark-stir-fips-security/crates/api/src/: auth_middleware.rs  convert.rs  lib.rs  security.rs  types.rs
stark-stir-fips-security/crates/api/src/routes/: admin.rs  health.rs  mod.rs  oauth.rs  proofs.rs  prove.rs  security.rs  swarm.rs  verify.rs
stark-stir-fips-security/crates/api/tests/: dns_rollup.rs  level1_q40_smoke.rs  level5_q65_e2e.rs  rollup_demo.rs
stark-stir-fips-security/crates/auth/: Cargo.toml
stark-stir-fips-security/crates/auth/src/: lib.rs
stark-stir-fips-security/crates/bench/: Cargo.toml
stark-stir-fips-security/crates/bench/benches/: micro.rs
stark-stir-fips-security/crates/cairo-bench/: Cargo.toml
stark-stir-fips-security/crates/cairo-bench/examples/: dns_megazone_demo.rs
stark-stir-fips-security/crates/cairo-bench/src/: dns.rs  dns_authority.rs  lib.rs
stark-stir-fips-security/crates/deep_ali/: Cargo.toml
stark-stir-fips-security/crates/deep_ali/src/: air_workloads.rs  cubic_ext.rs  fri.rs  lib.rs  quad_ext.rs  sextic_ext.rs  tower_field.rs
stark-stir-fips-security/crates/merkle/src/: lib.rs
stark-stir-fips-security/crates/proof-store/: Cargo.toml
stark-stir-fips-security/crates/proof-store/src/: lib.rs
stark-stir-fips-security/crates/src/: lib.rs
stark-stir-fips-security/crates/stark-server/: Cargo.toml
stark-stir-fips-security/crates/stark-server/src/: main.rs
stark-stir-fips-security/docs/: dns-rollup-demo.md
