[package]
name = "stark-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "stark-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
api = { path = "../api" }
auth = { path = "../auth" }
proof-store = { path = "../proof-store" }
rand = { workspace = true }
hex = "0.4"
